--- a/src/style.css
+++ b/src/style.css
@@ -52,6 +52,57 @@ body {
 }
 .page-main {
     background-color: #dcedc8;
+    display: grid;
+    place-items: center;
+}
+.slider-container {
+    width: 100%;
+    max-width: 800px;
+    height: 500px;
+    position: relative;
+    overflow: hidden;
+}
+.slide {
+    width: 100%;
+    max-width: 800px;
+    height: 500px;
+    position: absolute;
+    transition: all 0.5s;
+}
+.slide img
+{
+    /* width: 100%; */
+    height: 100%;
+    object-fit: cover;
+}
+.btn-next, .btn-prev
+{
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    padding: 10px;
+    border: none;
+    border-radius: 50%;
+    z-index: 10px;
+    cursor: pointer;
+    background-color: #fff;
+    font-size: 18px;
+}
+.navdot 
+{
+    cursor: pointer;
+}
+.btn-prev{
+    top: 45%;
+    left: 2%;
+}
+.btn-next{
+    top: 45%;
+    right: 2%;
+}
+.btn-next:active, .btn-prev:active, .navdot:active
+{
+    transform: scale(1.1);
 }
 .page-footer {
     background-color: #ffecb3;
